--- a/text_generation_webui.ipynb
+++ b/text_generation_webui.ipynb
@@ -33,7 +33,7 @@
         "# Parameters\n",
         "model_url = \"TheBloke/dolphin-2.2.1-mistral-7B-GPTQ\" #@param {type:\"string\"}\n",
         "branch = \"gptq-4bit-32g-actorder_True\" #@param {type:\"string\"}\n",
-        "command_line_flags = \"--n-gpu-layers 128 --load-in-4bit --use_double_quant\" #@param {type:\"string\"}\n",
+        "command_line_flags = \"--use_fast\" #@param {type:\"string\"}\n",
         "api = False #@param {type:\"boolean\"}\n",
         "model_folder = \"dolphin-2.2.1-mistral-7B-GPTQ\" #@param {type:\"string\"}\n",
         "\n",
