--- a/text_generation_webui.ipynb
+++ b/text_generation_webui.ipynb
@@ -34,7 +34,7 @@
         "model_url = \"TheBloke/dolphin-2.2.1-mistral-7B-GPTQ\" #@param {type:\"string\"}\n",
         "branch = \"gptq-4bit-32g-actorder_True\" #@param {type:\"string\"}\n",
         "command_line_flags = \"--use_fast\" #@param {type:\"string\"}\n",
-        "api = False #@param {type:\"boolean\"}\n",
+        "api = True #@param {type:\"boolean\"}\n",
         "model_folder = \"dolphin-2.2.1-mistral-7B-GPTQ\" #@param {type:\"string\"}\n",
         "\n",
         "model_url = model_url.strip()\n",
@@ -49,7 +49,7 @@
         "model_folder = f\"/content/text-generation-webui/models/{model_folder}\"\n",
         "\n",
         "if api:\n",
-        "  for param in ['--api', '--public-api']:\n",
+        "  for param in ['--api','--public-api',' --listen']:\n",
         "    if param not in command_line_flags:\n",
         "      command_line_flags += f\" {param}\"\n",
         "\n",
