add new notebook

--- a/dolphin-2.6-mistral-7B-GPTQ.ipynb
+++ b/dolphin-2.6-mistral-7B-GPTQ.ipynb
@@ -31,11 +31,11 @@
     "!git clone https://github.com/oobabooga/text-generation-webui.git\n",
     "\n",
     "# Parameters\n",
-    "model_url = \"TheBloke/OpenHermes-2.5-Mistral-7B-16k-GPTQ\" #@param {type:\"string\"}\n",
+    "model_url = \"TheBloke/dolphin-2.6-mistral-7B-GPTQ\" #@param {type:\"string\"}\n",
     "branch = \"gptq-4bit-32g-actorder_True\" #@param {type:\"string\"}\n",
     "command_line_flags = \"--max_seq_len 16384\" #@param {type:\"string\"}\n",
     "api = True #@param {type:\"boolean\"}\n",
-    "model_folder = \"OpenHermes-2.5-Mistral-7B-16k-GPTQ\" #@param {type:\"string\"}\n",
+    "model_folder = \"dolphin-2.6-mistral-7B-GPTQ\" #@param {type:\"string\"}\n",
     "\n",
     "model_url = model_url.strip()\n",
     "if model_url != \"\":\n",
@@ -64,7 +64,8 @@
     "    \"special_tokens_map.json\",\n",
     "    \"tokenizer.json\",\n",
     "    \"tokenizer.model\",\n",
-    "    \"tokenizer_config.json\"\n",
+    "    \"tokenizer_config.json\",\n",
+    "    \"zero_to_fp32.py\"\n",
     "]\n",
     "\n",
     "model_url += f\"/resolve/{branch}/\"\n",
